# pollchain

./: .gitignore  .vercelignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/delegation/: Cargo.toml
contracts/delegation/src/: lib.rs
contracts/execution/: Cargo.toml
contracts/execution/src/: lib.rs
contracts/faucet/: Cargo.toml
contracts/faucet/src/: lib.rs
contracts/governance_token/: Cargo.toml
contracts/governance_token/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/voting/: Cargo.toml
contracts/voting/src/: lib.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx  NotificationBanner.tsx  ProposalCard.tsx  VoteModal.tsx
frontend/src/hooks/: usePollBalance.ts  useProposals.ts  useWallet.ts
frontend/src/pages/: About.tsx  CreateProposal.tsx  Dashboard.tsx  Delegate.tsx  Faucet.tsx  Home.tsx  Leaderboard.tsx  MyProposals.tsx  ProposalDetail.tsx  Proposals.tsx  Treasury.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: constants.ts  contracts.ts  stellar.ts  wallet.ts
